--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
 	"version": 2,
-	"builds": [{ "src": "main.py", "use": "@vercel/python" }],
+	"builds": [{ "src": "test.py", "use": "@vercel/python" }],
 	"routes": [
-		{ "src": "/", "dest": "main.py" }
+		{ "src": "/", "dest": "test.py" }
 	]
 }
